# the_factory_bot_task

./: Dockerfile  Makefile  README.md  docker-compose.yml
fabotrix/: run_api.py  run_bot.py
fabotrix/app/: api_entrypoint.py
fabotrix/app/api/: deps.py
fabotrix/app/api/api_v1/: api_routes.py
fabotrix/app/api/api_v1/endpoints/: login.py  messages.py  users.py
fabotrix/app/api/crud/: __init__.py  base.py  message.py  user.py
fabotrix/app/api/models/: message.py  user.py
fabotrix/app/api/schemas/: __init__.py  message.py  user.py
fabotrix/app/bot/: dispatcher.py
fabotrix/app/bot/handlers/: __init__.py  message_handler.py
fabotrix/app/bot/utils/: set_default_commands.py
fabotrix/app/core/: celery.py  config.py  security.py
fabotrix/app/database/: __init__.py  base_class.py  services.py  session.py
fabotrix/app/migrations/: env.py
fabotrix/app/migrations/versions/: 67a1aa480c02_initial_migration.py
fabotrix/poetry/: pyproject.toml
