[tool.poetry]
name = "eternal"
version = "0.1.0"
description = "telegram bot"
authors = ["Denis Zenukhin <funiusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
black = "^23.3.0"
asyncpg = "^0.27.0"
phonenumbers = "^8.13.14"
psycopg2-binary = "^2.9.6"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
greenlet = "^2.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
pyjwt = "^2.7.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
